Set matomo mariadb root password
The db is accessible only from the VM either way

--- a/analytics/docker-compose.yml
+++ b/analytics/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     volumes:
       - db:/var/lib/mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=
+      - MYSQL_ROOT_PASSWORD=root
     env_file:
       - ./db.env
 
