--- a/analytics/docker-compose.yml
+++ b/analytics/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
 
   web:
-    image: nginx:alpine
+    image: nginx:1.19.10
     restart: always
     volumes:
       - matomo:/var/www/html:ro
@@ -12,14 +12,14 @@ services:
       - 8080:80
 
   app:
-    image: matomo:fpm-alpine
+    image: matomo:4.2.1-fpm
     restart: always
     links:
       - db
     volumes:
 #      - ./config:/var/www/html/config:rw
 #      - ./logs:/var/www/html/logs
-      - matomo:/var/www/html
+      - ./matomo:/var/www/html
     environment:
       - MATOMO_DATABASE_HOST=db
     env_file:
