--- a/analytics/docker-compose.yml
+++ b/analytics/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       # see https://github.com/matomo-org/matomo-nginx
       - ./matomo.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
-      - 8080:80
+      - 80:80
 
   app:
     image: matomo:4.2.1-fpm
@@ -17,7 +17,7 @@ services:
     volumes:
 #      - ./config:/var/www/html/config:rw
 #      - ./logs:/var/www/html/logs
-      - ./matomo:/var/www/html
+      - matomo:/var/www/html
     environment:
       - MATOMO_DATABASE_HOST=db
     env_file:
