--- a/.github/workflows/update-test.yml
+++ b/.github/workflows/update-test.yml
@@ -1,4 +1,4 @@
-name: Build, push, and deploy
+name: Update test
 
 on:
   push:
@@ -44,11 +44,11 @@ jobs:
 
     - name: Upload secrets
       run: |-
-        gcloud compute scp --zone ${GCE_INSTANCE_ZONE} secrets.env root@${GCE_INSTANCE}:/home/mlazowik/infra/app/
+        gcloud compute scp --zone ${GCE_INSTANCE_ZONE} secrets.env ${GCE_INSTANCE}:/home/mlazowik/infra/app/
 
     - name: Deploy
       run: |-
-        gcloud compute ssh --zone ${GCE_INSTANCE_ZONE} root@${GCE_INSTANCE} -- \
+        gcloud compute ssh --zone ${GCE_INSTANCE_ZONE} ${GCE_INSTANCE} -- \
           -tt -C "cd /home/mlazowik/infra/app && git pull && bash update-all.sh && yes | docker system prune"
 
     - name: Purge cache
