--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -2,22 +2,23 @@ version: "3.7"
 services:
 
   frontend:
-    image: warsawlo/warsawlo-2.0:latest
+    image: warsawlo/warsawlo-2.0:${FRONTEND_TAG}
     ports:
       - "80:80"
     networks:
       - warsawlo
     environment:
       NGINX_BACK_URL: "backend:8080"
-      NGINX_SERVER_NAME: "localhost 127.0.0.1 lo.lazowik.pl test.warsawlo.pl"
+      NGINX_SERVER_NAME: "localhost 127.0.0.1 test.warsawlo.pl v2.warsawlo.pl"
       API_URL: "/api"
     env_file:
       - secrets.env
+      - frontend.env
     depends_on:
       - backend
 
   backend:
-    image: warsawlo/warsawlo-django:latest
+    image: warsawlo/warsawlo-django:${BACKEND_TAG}
     volumes:
       - media:/opt/warsawlo/media
     networks:
@@ -25,16 +26,17 @@ services:
     environment:
       DJANGO_SETTINGS_MODULE: warsawlo.settings
       DJANGO_DEBUG: "False"
-      DJANGO_ALLOWED_HOSTS: "localhost 127.0.0.1 lo.lazowik.pl test.warsawlo.pl"
+      DJANGO_ALLOWED_HOSTS: "localhost 127.0.0.1 test.warsawlo.pl v2.warsawlo.pl"
       SECURE_COOKIES: "True"
       SQL_ENGINE: django.db.backends.postgresql
-      SQL_DATABASE: ${DB_NAME}
-      SQL_USER: ${DB_USER}
-      SQL_PASSWORD: ${DB_PASSWORD}
+      SQL_DATABASE: warsawlo
+      SQL_USER: warsawlo
+      SQL_PASSWORD: warsawlo
       SQL_HOST: "db"
       UWSGI_WORKERS_COUNT: 1
     env_file:
       - secrets.env
+      - backend.env
     depends_on:
       - db
 
@@ -43,9 +45,9 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: warsawlo
+      POSTGRES_PASSWORD: warsawlo
+      POSTGRES_DB: warsawlo
     networks:
       - warsawlo
 
