--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       NGINX_BACK_URL: "backend:8080"
       NGINX_SERVER_NAME: "localhost 127.0.0.1 test.warsawlo.pl v2.warsawlo.pl"
       API_URL: "/api"
+      GRAPHQL_ENDPOINT: "/api/graphql/"
     env_file:
       - secrets.env
     depends_on:
