Add Sentry DSNs for different projects

--- a/.github/workflows/update-test.yml
+++ b/.github/workflows/update-test.yml
@@ -41,8 +41,8 @@ jobs:
       shell: bash
       env:
         DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-        PUBLIC_SENTRY_DSN: ${{ secrets.PUBLIC_SENTRY_DSN }}
-        SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+        PUBLIC_SENTRY_DSN: ${{ secrets.PUBLIC_SENTRY_DSN_TEST }}
+        SENTRY_DSN: ${{ secrets.SENTRY_DSN_TEST }}
         MATOMO_BASE_URL: ${{ secrets.MATOMO_BASE_URL }}
         MATOMO_SITE_ID: ${{ secrets.MATOMO_SITE_ID_TEST }}
         
