--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       NGINX_SERVER_NAME: "localhost 127.0.0.1 test.po8klasie.pl po8klasie.pl"
       API_URL: "/api"
       GRAPHQL_ENDPOINT: "/api/graphql/"
+      APP_ENVIRONMENT: ${APP_ENVIRONMENT}
+      APP_FRONTEND_RELEASE: ${FRONTEND_TAG}
     env_file:
       - secrets.env
     depends_on:
@@ -34,6 +36,7 @@ services:
       SQL_PASSWORD: warsawlo
       SQL_HOST: "db"
       UWSGI_WORKERS_COUNT: 1
+      APP_BACKEND_RELEASE: ${BACKEND_TAG}
     env_file:
       - secrets.env
     depends_on:
