Change @warsawlo/devops to @po8klasie/devops in CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,4 +5,4 @@
 # Unless a later match takes precedence, @WarsawLO/devops team
 # will be requested for review when someone opens a pull request.
 
-*       @WarsawLO/devops
+*       @po8klasie/devops
