--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx-app.conf/etc/nginx/conf.d/app.conf:ro
+      - ./nginx-app.conf:/etc/nginx/conf.d/app.conf:ro
     ports:
       - "80:80"
     networks:
