Prefix frontend upstream with http://

--- a/app/nginx-app.conf
+++ b/app/nginx-app.conf
@@ -11,7 +11,7 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
 
-        proxy_pass frontend:3000;
+        proxy_pass http://frontend:3000;
     }
 
     # We want to host the backend API on the same domain to improve client performance.
