Add proxy headers and remove Cache-Control header (#36)
* Add proxy headers and remove Cache-Control header

* also add --force-recreate to update-all command

* Prefix frontend upstream with http://

--- a/app/nginx-app.conf
+++ b/app/nginx-app.conf
@@ -6,11 +6,12 @@ server {
     add_header Permissions-Policy "interest-cohort=()";
 
     location / {
-        proxy_pass frontend:3000;
-    }
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
 
-    location /_next/static {
-        add_header Cache-Control "public, max-age=31536000, immutable";
+        proxy_pass http://frontend:3000;
     }
 
     # We want to host the backend API on the same domain to improve client performance.
