--- a/app/nginx-app.conf
+++ b/app/nginx-app.conf
@@ -14,6 +14,13 @@ server {
         proxy_pass http://frontend:3000;
     }
 
+    location /_next/static/ {
+        proxy_hide_header Cache-Control;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+
+        proxy_pass http://frontend:3000;
+    }
+
     # We want to host the backend API on the same domain to improve client performance.
     # This way we avoid an extra DNS query + TCP and TLS session negotiation.
     location ~ (/api|/static-django) {
